--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,18 @@
-:root {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+  /* margin: 0; */
+  /* padding: 0; */
+  font-family: 'Roboto', sans-serif; /* Cambia 'Roboto' por la fuente que prefieras */
+  background-color: #f0f8ff; /* Fondo celeste muy claro */
+  /* color: #333; Color de texto oscuro */
+  /* height: 100vh; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +79,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
