--- a/src/cards/components/list/bankList.css
+++ b/src/cards/components/list/bankList.css
@@ -1,28 +1,28 @@
 .bank-list-container {
-    max-width: 800px; /* Ancho máximo del contenedor */
-    margin: 0 auto; /* Centrar el contenedor en la página */
+    max-width: 800px; 
+    margin: 0 auto; 
     padding: 20px;
-    background-color: #ffffff; /* Fondo blanco */
-    border: 1px solid #e0e0e0; /* Borde muy claro */
+    background-color: #ffffff; 
+    border: 1px solid #e0e0e0; 
     border-radius: 8px;
-    overflow: auto; /* Habilitar scroll si es necesario */
+    overflow: auto; 
 }
 
 .bank-list-container h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333; /* Color de texto oscuro */
+    color: #333; 
 }
 
 .bank-list-container p {
     text-align: center;
     margin-bottom: 10px;
-    color: #666; /* Color de texto gris */
+    color: #666; 
 }
 
 .bank-list-container button {
-    background-color: #f0f0f0; /* Fondo celeste muy claro */
-    color: #333; /* Color de texto oscuro */
+    background-color: #f0f0f0; 
+    color: #333; 
     border: none;
     padding: 8px 16px;
     border-radius: 4px;
@@ -31,7 +31,7 @@
 }
 
 .bank-list-container button:hover {
-    background-color: #e0e0e0; /* Color de fondo más oscuro al pasar el mouse */
+    background-color: #e0e0e0; 
 }
 
 .bank-list-container table {
@@ -41,14 +41,14 @@
 }
 
 .bank-list-container th, .bank-list-container td {
-    border: 1px solid #e0e0e0; /* Borde muy claro */
+    border: 1px solid #e0e0e0; 
     padding: 8px;
     text-align: left;
 }
 
 .bank-list-container th {
-    background-color: #f5f5f5; /* Fondo celeste muy claro para encabezados */
-    color: #333; /* Color de texto oscuro */
+    background-color: #f5f5f5; 
+    color: #333; 
 }
 
 .bank-list-container .cardsImg {
